# finspector

./: .gitignore  LICENSE  MANIFEST.in  README.md  acl2023demo.ipynb  finspector_js.json  install.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/: sample-movie-quotes.csv
finspector/: __init__.py  finspector.py
finspector/labextension/: build_log.json  package.json
finspector/labextension/static/: 154.77b0c11fea510ea9cf19.js  261.ed10d599d9628f40d9d1.js  269.40b3e09e815c15da5389.js  755.3a978543f6e4cc10f7a5.js  796.14b3445f2f0c8ac027d3.js  909.2d4159888fc5a2124228.js  lib_index_js.b58cb5e484a15f10710d.js  lib_index_js.b58cb5e484a15f10710d.js.map  lib_labplugin_js.4e6d294ed40a3d6328b8.js  lib_labplugin_js.4e6d294ed40a3d6328b8.js.map  remoteEntry.2af38c700ab88fa8ce6d.js  remoteEntry.f86c0f6392976a7a95ca.js  remoteEntry.f86c0f6392976a7a95ca.js.map  third-party-licenses.json  vendors-node_modules_bootstrap_dist_js_bootstrap_esm_js.ebbb72b31f3c1e6be7f5.js  vendors-node_modules_bootstrap_dist_js_bootstrap_esm_js.ebbb72b31f3c1e6be7f5.js.map  vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_cssW-66adbf.6cf23d58d6678f5b93eb.js  vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_cssW-66adbf.6cf23d58d6678f5b93eb.js.map  vendors-node_modules_jquery_dist_jquery_js.c532b43dac9ed0217c19.js  vendors-node_modules_jquery_dist_jquery_js.c532b43dac9ed0217c19.js.map
finspector/nbextension/: extension.js  extension.js.map  index.js  index.js.LICENSE.txt  index.js.map
js/: README.md  package-lock.json  package.json  webpack.config.js
js/lib/: custom.css  dashboard.js  extension.js  finspector.js  index.js  labplugin.js  lasso.js  project.js  raincloud.js  select.js  table.js
