[metadata]
name = finspector
author = Bum Chul Kwon
author_email=bumchul.kwon@us.ibm.com
version = attr: finspector._version.__version__
description = Finspector is designed to help users explore the fairness and bias of foundation models using interactive visualizations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IBM/finspector
keywords = ipython, widgets, Jupyter, JupyterLab, JupyterLab3
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    ipywidgets>=7.6.0,<9
python_requires = >=3.7
